# NduloWeb.vol2

./: Cargo.toml  nginx.conf
.github/workflows/: nduloweb.yml
public/: index.html  sitemap.xml
public/assets/: index-9MenqJMI.js  index-DMlW7OLX.css  index-DQPmyNjg.css  index-pAGwA72J.js
src/: main.rs
