[package]
name = "portfolio-seo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"